src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Total_Start_up_Add_On__c</fullName>
        <description>Total Start-up $
Rollup of quote line item Total Start-up $</description>
        <inlineHelpText>Total Start-up $
Rollup of quote line item Total Start-up $</inlineHelpText>
        <label>Total Start-up $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Warranty_Terms__c</fullName>
        <label>Warranty Terms</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>m_Grand_Total_E_F_D_T__c</fullName>
        <description>Multi-Currency Final Selling Price
Total Equipment Selling Price - Total Discount + Total Freight + Bulk Tax</description>
        <inlineHelpText>Multi-Currency Final Selling Price
Total Equipment Selling Price - Total Discount + Total Freight + Bulk Tax</inlineHelpText>
        <label>Grand Total</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>m_Selling_Total_Equip_Price_FOB__c</fullName>
        <description>Mutli-Currency Total Equipment Selling Price $
Rollup of quote line item Total Equipment Selling Price</description>
        <inlineHelpText>Mutli-Currency Total Equipment Selling Price $
Rollup of quote line item Total Equipment Selling Price</inlineHelpText>
        <label>Sub Total</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>m_Sub_Total_E_L_D_T_TF__c</fullName>
        <description>Multi-Currency Total Equip+Freight Selling Price w Disc Minus Total Freight</description>
        <formula>&quot;$&quot; + IF(NOT(CONTAINS(TEXT(Total_Selling_Price_w_Logistics_Disc__c -  Total_Freight__c) , &quot;.&quot; ) ),TEXT(Total_Selling_Price_w_Logistics_Disc__c -  Total_Freight__c)  + &quot;.00&quot;,IF(LEFT(RIGHT(TEXT(Total_Selling_Price_w_Logistics_Disc__c -  Total_Freight__c) ,2),1) = &quot;.&quot;,TEXT(Total_Selling_Price_w_Logistics_Disc__c -  Total_Freight__c)  + &quot;0&quot;,TEXT(Total_Selling_Price_w_Logistics_Disc__c -  Total_Freight__c)))

 + &quot; (&quot; + IF(NOT(CONTAINS(TEXT(Local_Total_Selling_Price_w_Logistics_Di__c -  Local_Total_Freight__c) , &quot;.&quot; ) ),TEXT(Local_Total_Selling_Price_w_Logistics_Di__c -  Local_Total_Freight__c)  + &quot;.00&quot;,IF(LEFT(RIGHT(TEXT(Local_Total_Selling_Price_w_Logistics_Di__c -  Local_Total_Freight__c) ,2),1) = &quot;.&quot;,TEXT(Local_Total_Selling_Price_w_Logistics_Di__c -  Local_Total_Freight__c)  + &quot;0&quot;,TEXT(Local_Total_Selling_Price_w_Logistics_Di__c -  Local_Total_Freight__c)))+ &quot; &quot; +  Local_Currency__c + &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Multi-Currency Total Equip+Freight Selling Price w Disc Minus Total Freight</inlineHelpText>
        <label>Sub Total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>m_Total_Freight__c</fullName>
        <description>Multi-Currency Total Freight Selling Price + Bulk Freight</description>
        <inlineHelpText>Multi-Currency Total Freight Selling Price + Bulk Freight</inlineHelpText>
        <label>Total Freight</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <recordTypes>
        <fullName>Latin_America</fullName>
        <active>true</active>
        <label>Latin America</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LATAM_Quote_Status_Submit_for_Approvals</fullName>
        <active>true</active>
        <errorConditionFormula>!IsSyncing &amp;&amp;  ISPICKVAL( Quote_Status__c , &quot;Submit for Approvals&quot;)</errorConditionFormula>
        <errorDisplayField>Quote_Status__c</errorDisplayField>
        <errorMessage>Please sync the quote before submitting for Approvals.
When creating a Quote, please select Draft.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LATAM_Reserve_Comments_Required</fullName>
        <active>true</active>
        <errorConditionFormula>((Total_Outsource_Add_On__c &gt; 0 &amp;&amp;  PRIORVALUE(Total_Outsource_Add_On__c) &gt; 0 ) ||  
(Logistics_Contingency__c &gt;0 &amp;&amp;  PRIORVALUE(Logistics_Contingency__c) &gt; 0) || 
(Logistics_Contractor_Markup__c &gt; 0 &amp;&amp;  PRIORVALUE(Logistics_Contractor_Markup__c) &gt; 0) || 
(Logistics_COP_Reserve__c &gt; 0 &amp;&amp;  PRIORVALUE(Logistics_COP_Reserve__c) &gt; 0) ||  
(Logistics_Extended_Warranty__c  &gt; 0 &amp;&amp;  PRIORVALUE(Logistics_Extended_Warranty__c) &gt; 0)|| 
(Logistics_Inspection__c &gt; 0 &amp;&amp;  PRIORVALUE(Logistics_Inspection__c) &gt; 0)||  
(Logistics_Labor_Hours__c  &gt; 0 &amp;&amp;  PRIORVALUE(Logistics_Labor_Hours__c) &gt; 0)|| 
(Logistics_Maintenance_Visits__c &gt; 0 &amp;&amp;  PRIORVALUE(Logistics_Maintenance_Visits__c)&gt; 0)||  
(Logistics_Marketing__c  &gt; 0 &amp;&amp;  PRIORVALUE(Logistics_Marketing__c) &gt; 0)||  
(Total_Service_Add_On__c &gt;0 &amp;&amp;  PRIORVALUE(Total_Service_Add_On__c) &gt; 0)|| 
(Total_Start_up_Add_On__c  &gt; 0 &amp;&amp;  PRIORVALUE(Total_Start_up_Add_On__c) &gt; 0)|| 
(Logistics_Standard_Warranty__c  &gt; 0 &amp;&amp;  PRIORVALUE(Logistics_Standard_Warranty__c) &gt; 0)|| 
(Logistics_Training_Factory__c &gt; 0 &amp;&amp;  PRIORVALUE(Logistics_Training_Factory__c) &gt; 0)|| 
(Logistics_Training_On_Site__c &gt; 0 &amp;&amp;  PRIORVALUE(Logistics_Training_On_Site__c) &gt; 0)|| 
(Logistics_Travel_Expenses__c &gt; 0 &amp;&amp;  PRIORVALUE(Logistics_Travel_Expenses__c) &gt; 0)|| 
(Logistics_Warranty_Reserve__c &gt; 0 &amp;&amp;  PRIORVALUE(Logistics_Warranty_Reserve__c) &gt; 0)|| 
(Logistics_Witness_Test__c &gt; 0 &amp;&amp;  PRIORVALUE(Logistics_Witness_Test__c)&gt; 0)) &amp;&amp;  ISBLANK(Reserve_Comments__c) &amp;&amp;  IsSyncing 
&amp;&amp;  $User.Alias !=&quot;ajunu&quot;</errorConditionFormula>
        <errorDisplayField>Reserve_Comments__c</errorDisplayField>
        <errorMessage>Please mention Reserve Comments as your Quote has reserves</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Margin_Approval_Comments_field_required</fullName>
        <active>true</active>
        <description>Margin Approval Comments field required when margin is less than 15%</description>
        <errorConditionFormula>BEGINS($Profile.Name, &quot;Latin&quot;)&amp;&amp; 

(  
  (
    Opportunity.Total_Margin_Percent__c  &lt;0.15 &amp;&amp; ISPICKVAL(Margin_Approval_Status__c, &quot;Needs Review&quot;) &amp;&amp; ISBLANK( Margin_Approval_Comments__c )
  )
  || 
  ( 
    Minimum_VRV_GM__c  &lt;0.20 &amp;&amp;  Minimum_VRV_GM__c  !=NULL &amp;&amp; ISPICKVAL(Margin_Approval_Status__c, &quot;Needs Review&quot;) &amp;&amp; ISBLANK( Margin_Approval_Comments__c )
  )
) &amp;&amp;  

IsSyncing</errorConditionFormula>
        <errorDisplayField>Margin_Approval_Comments__c</errorDisplayField>
        <errorMessage>Error on the Quote: Margin Approval Comments.
Please enter Margin Approval Comments: 
Describe why the VRV Item Margin is less than 20% and also describe why the Total Margin % is less than 15%</errorMessage>
    </validationRules>
</CustomObject>